force-app/main/default/objects/Program_Plan__c/Program_Plan__c.object-meta.xml
<CustomObject>
    <label>Program Plan</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Program Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>