force-app/main/default/objects/Program_Plan__c/fields/Able_to_Recruit__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Recruit__c</fullName>
    <label>Able to Recruit</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>