force-app/main/default/objects/Program_Plan__c/fields/Additional_Resources_for_Strategic_Plan__c.field-meta.xml
<CustomField>
    <fullName>Additional_Resources_for_Strategic_Plan__c</fullName>
    <label>Additional Resources for Strategic Plan</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>