force-app/main/default/objects/Program_Plan__c/fields/Areas_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Service__c</fullName>
    <label>Areas of Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Providing information to crime victims</fullName>
            </value>
            <value>
                <fullName>Referral services for crime victims</fullName>
            </value>
            <value>
                <fullName>Victim advocacy/accompaniment</fullName>
            </value>
            <value>
                <fullName
        >Law enforcement interview advocacy/accompaniment</fullName>
                <label>Law enforcement interview advocacy/accompaniment</label>
            </value>
            <value>
                <fullName
        >Intervention with employer, creditor, landlord or academic institution</fullName>
                <label
        >Intervention with employer, creditor, landlord or academic institution</label>
            </value>
            <value>
                <fullName>Child and/or dependent care assistance</fullName>
            </value>
            <value>
                <fullName>Transportation assistance</fullName>
            </value>
            <value>
                <fullName>Interpreter services</fullName>
            </value>
            <value>
                <fullName>Crisis intervention</fullName>
            </value>
            <value>
                <fullName>Hotline/crisis line counseling</fullName>
            </value>
            <value>
                <fullName>On-scene crisis response</fullName>
            </value>
            <value>
                <fullName
        >Sexual Assault Response Team (SART) team development</fullName>
                <label
        >Sexual Assault Response Team (SART) team development</label>
            </value>
            <value>
                <fullName
        >Coordinated Community Response (CCR) team development</fullName>
                <label
        >Coordinated Community Response (CCR) team development</label>
            </value>
            <value>
                <fullName>Updating tribal codes for victim services</fullName>
            </value>
            <value>
                <fullName
        >Access to Traditional/Cultural Healing ceremonies for victims</fullName>
                <label
        >Access to Traditional/Cultural Healing ceremonies for victims</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>