force-app/main/default/objects/Program_Plan__c/fields/Areas_of_Service_Explaination__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Service_Explaination__c</fullName>
    <label>Areas of Service Explaination</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>