force-app/main/default/objects/Program_Plan__c/fields/Biggest_Issue_Organization_is_Facing__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Issue_Organization_is_Facing__c</fullName>
    <label>Biggest Issue Organization is Facing</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>