force-app/main/default/objects/Program_Plan__c/fields/Current_Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Description__c</fullName>
    <label>Current Program Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>