force-app/main/default/objects/Program_Plan__c/fields/Has_Equipment_and_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Has_Equipment_and_Supplies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Equipment and Supplies</label>
    <type>Checkbox</type>
</CustomField>