force-app/main/default/objects/Program_Plan__c/fields/Has_Needs_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Has_Needs_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Needs Assessment</label>
    <type>Checkbox</type>
</CustomField>