force-app/main/default/objects/Program_Plan__c/fields/How_Funds_Utilized__c.field-meta.xml
<CustomField>
    <fullName>How_Funds_Utilized__c</fullName>
    <label>How Funds Utilized</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>