force-app/main/default/objects/Program_Plan__c/fields/Is_Current_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Plan</label>
    <type>Checkbox</type>
</CustomField>