force-app/main/default/objects/Program_Plan__c/fields/Other_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Other_Challenges__c</fullName>
    <label>Other Challenges</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>