force-app/main/default/objects/Program_Plan__c/fields/Previous_Experiences__c.field-meta.xml
<CustomField>
    <fullName>Previous_Experiences__c</fullName>
    <label>Previous Experiences</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>