force-app/main/default/objects/Program_Plan__c/fields/Reason_for_Updating__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Updating__c</fullName>
    <label>Reason for Updating</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>