force-app/main/default/objects/Program_Plan__c/fields/Reviewer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Notes__c</fullName>
    <label>Reviewer Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>