force-app/main/default/objects/Program_Plan__c/fields/Strategic_Plan__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Plan__c</fullName>
    <label>Strategic Plan</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>